@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -51,6 +51,7 @@ import jdk.jfr.ValueDescriptor;
 import jdk.jfr.internal.MetadataDescriptor.Element;
 import jdk.jfr.internal.consumer.RecordingInput;
 import jdk.jfr.internal.consumer.StringParser;
+import jdk.jfr.internal.util.Utils;
 
 /**
  * Parses metadata.
@@ -74,12 +75,12 @@ final class MetadataReader {
         }
         descriptor = new MetadataDescriptor();
         Element root = createElement();
-        Element metadata = root.elements("metadata").get(0);
+        Element metadata = root.elements("metadata").getFirst();
         declareTypes(metadata);
         defineTypes(metadata);
         annotateTypes(metadata);
         buildEvenTypes();
-        Element time = root.elements("region").get(0);
+        Element time = root.elements("region").getFirst();
         descriptor.gmtOffset = time.attribute(MetadataDescriptor.ATTRIBUTE_GMT_OFFSET, 1);
         descriptor.dst = time.attribute(MetadataDescriptor.ATTRIBUTE_DST, 0L);
         descriptor.locale = time.attribute(MetadataDescriptor.ATTRIBUTE_LOCALE, "");
