@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -43,6 +43,9 @@ import java.util.concurrent.ConcurrentLinkedQueue;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import static java.net.Proxy.NO_PROXY;
 
@@ -53,7 +56,7 @@ import static java.net.Proxy.NO_PROXY;
  *          verifying that the remote address of the HTTP exchange (on the fake proxy server)
  *          is always the same InetSocketAddress.
  * @modules jdk.httpserver
- * @run main/othervm PlainProxyConnectionTest
+ * @run main/othervm -Djdk.tracePinnedThreads=full PlainProxyConnectionTest
  * @author danielfuchs
  */
 public class PlainProxyConnectionTest {
@@ -61,6 +64,7 @@ public class PlainProxyConnectionTest {
     static final String RESPONSE = "<html><body><p>Hello World!</body></html>";
     static final String PATH = "/foo/";
     static final ConcurrentLinkedQueue<InetSocketAddress> connections = new ConcurrentLinkedQueue<>();
+    private static final AtomicInteger IDS = new AtomicInteger();
 
     // For convenience the server is used both as a plain server and as a plain proxy.
     // When used as a proxy, it serves the request itself instead of forwarding it
@@ -196,6 +200,18 @@ public class PlainProxyConnectionTest {
 
         performSanityTest(server, uri, proxiedURI);
 
+        int id = IDS.getAndIncrement();
+        ExecutorService virtualExecutor = Executors.newThreadPerTaskExecutor(Thread.ofVirtual()
+                .name("HttpClient-" + id + "-Worker", 0).factory());
+        CountingProxySelector ps = CountingProxySelector.of(
+                InetSocketAddress.createUnresolved(
+                        server.getAddress().getAddress().getHostAddress(),
+                        server.getAddress().getPort()));
+        HttpClient client = HttpClient.newBuilder()
+                .version(version)
+                .executor(virtualExecutor)
+                .proxy(ps)
+                .build();
         try {
             connections.clear();
             System.out.println("\nReal test begins here.");
@@ -206,14 +222,6 @@ public class PlainProxyConnectionTest {
             // to the fake `proxiedURI` at
             // http://some.host.that.does.not.exist:4242/foo/x
             //
-            CountingProxySelector ps = CountingProxySelector.of(
-                    InetSocketAddress.createUnresolved(
-                            server.getAddress().getAddress().getHostAddress(),
-                            server.getAddress().getPort()));
-            HttpClient client = HttpClient.newBuilder()
-                    .version(version)
-                    .proxy(ps)
-                    .build();
             HttpRequest request = HttpRequest.newBuilder()
                     .uri(proxiedURI)
                     .GET()
@@ -268,6 +276,8 @@ public class PlainProxyConnectionTest {
             }
         } finally {
             connections.clear();
+            client.close();
+            virtualExecutor.close();
         }
     }
 }
