@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -94,7 +94,7 @@ public class MainTest {
 
     private static void assertMetaAnnotation(List<AnnotationElement> aes) {
         assertEquals(aes.size(), 1, "@ModularizedAnnotation should only have one meta-annotation");
-        AnnotationElement ae = aes.get(0);
+        AnnotationElement ae = aes.getFirst();
         assertEquals(ae.getTypeName(), ModularizedAnnotation.class.getName(), "Incorrect meta-annotation");
     }
 
