@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -60,7 +60,7 @@ public class TestCodeCacheConfig {
 
         List<RecordedEvent> events = Events.fromRecording(recording);
         Events.hasEvents(events);
-        RecordedEvent event = events.get(0);
+        RecordedEvent event = events.getFirst();
         long initialSize = (long) event.getValue("initialSize");
         long reservedSize = (long) event.getValue("reservedSize");
         long nonNMethodSize = (long) event.getValue("nonNMethodSize");
